--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/reactCrypto.iml
+.idea/modules.xml
+.idea/misc.xml
