--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "create-react-class": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "buildAndPush": "npm-sripts buildAndPush",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gulp-gcloud-publish": "^1.2.2"
   }
 }
