--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.2.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,6 +22,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gulp-gcloud-publish": "^1.2.2"
+    "gulp-gcloud-publish": "^1.2.2",
+    "babel-core": "^5.6.18",
+    "babel-loader": "^5.1.4",
+    "babel-plugin-react-transform": "^1.1.0",
+    "express": "^4.13.3",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   }
 }
