--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "babel-loader": "^5.1.4",
     "babel-plugin-react-transform": "^1.1.0",
     "express": "^4.13.3",
-    "webpack": "^1.9.11",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0"
+    "webpack": "2.1.0-beta.25",
+    "webpack-dashboard": "^0.1.8",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "2.1.0-beta.9",
+    "webpack-md5-hash": "^0.0.5",
+    "webpack-merge": "^0.15.0"
   }
 }
