--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "create-react-class": "^15.6.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
+    "react-bootstrap-modal": "^4.0.0",
     "react-dom": "^16.2.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
