--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.6.2",
+    "extract-text-webpack-plugin": "^0.8.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-modal": "^4.0.0",
     "react-dom": "^16.2.0",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
